2016-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c ("C"): Fixed problems while reading files
	"aaphrbkwwe.svg.-1899680443073025602",
	"aaphrbkwwe.svg.-5751004588641220738",
	"aaphrbkwwe.svg.-8875730334406147537", and
	"aaphrbkwwe.svg.4495884156523242589" provided via private email
	from Gustavo Grieco on February 8, 2016.

2016-05-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Verify that DIB file data is
	sufficient to meet claims made by file header.  Validate image
	planes.  Fixes Fixes problem reported by Hanno Böck on May 8th,
	2016 via private email entitled "malloc issue in ReadDIBImage".

2016-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c (RegisterMSLImage): Ignore the file extension on
	MSL files.  The only way to read an image from a MSL file (as
	opposed to explicitly running a MSL script with 'conjure') is by
	reading using a filename specification like "msl:filename".  This
	is done for security reasons.

	* magick/render.c (DrawPrimitive): Fix Coverity issue 126378
	"Resource leak".

	* coders/mat.c (DecompressBlock): Fix Coverity issue 126379
	"Resource leak".

	* magick/render.c (DrawImage): Fix Coverity issue 126380 "Resource
	leak".

2016-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Sanity check the image file
	path or URL before passing it to ReadImage().

	* config/delegates.mgk.in: Pare down delegates.mgk to reduce
	security exposure due to external programs not under our control.

2016-05-08  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Typo fix - matrix has nothing to do with PostScript.

2016-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (DecompressBlock): Don't hang on a corrupt deflate
	stream when reading matlab v6 file.  Fixes problem reported by
	Hanno Böck on May 8, 2016 via private email entitled "hang of
	matlab input file".
