@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160514"
-#define public MagickPackageReleaseDate "snapshot-20160514"
+#define public MagickPackageVersionAddendum ".020160515"
+#define public MagickPackageReleaseDate "snapshot-20160515"
