@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2016-05-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/render.c (DrawImage): Fixed segmentation violation while
+reading file &quot;275077586554139424.lqxdgqxtfs.svg&quot; provided via
+private email from Gustavo Grieco on May 15, 2016.  This is due to
+another CVE-2016-2317 related issue.</li>
+</ul>
+</blockquote>
 <p>2016-05-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
